--- a/Social Media Icons Hover Effect/style.css
+++ b/Social Media Icons Hover Effect/style.css
@@ -1,3 +1,9 @@
+/****************** 
+  yasinbaran.com.tr
+ ******************/
+/************** 
+    Body css
+ **************/
 body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -107,4 +113,8 @@ body div.container a.pinterest:hover {
 body div.container a.pinterest:hover i {
   color: white;
 }
+
+/****************** 
+  yasinbaran.com.tr
+ *****************/
 /*# sourceMappingURL=style.css.map */
