--- a/Js Analog Clock 2/src/style.css
+++ b/Js Analog Clock 2/src/style.css
@@ -6,7 +6,7 @@ html {
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background: #20639B;
+  background: #20639b;
 }
 
 html div.clock {
@@ -26,6 +26,20 @@ html div.clock {
   height: 100vh;
 }
 
+html div.clock div.clock-ring::before {
+  content: "";
+  width: 20px;
+  height: 20px;
+  background: #000000;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  border: none;
+  border-radius: 50%;
+}
+
 html div.clock div.clock-ring {
   width: 300px;
   height: 300px;
@@ -39,9 +53,6 @@ html div.clock div.clock-ring {
 
 html div.clock div.clock-ring div.hand {
   width: 50%;
-  height: 5px;
-  -webkit-clip-path: polygon(100% 0, 0 50%, 100% 100%);
-          clip-path: polygon(100% 0, 0 50%, 100% 100%);
   border: none;
   border-radius: 5px;
   position: absolute;
@@ -51,6 +62,25 @@ html div.clock div.clock-ring div.hand {
   -webkit-transition: all 1000ms linear;
   transition: all 1000ms linear;
   background: #000000;
+}
+
+html div.clock div.clock-ring div#hour {
+  height: 10px;
+  -webkit-transform: translateY(-5px);
+          transform: translateY(-5px);
+}
+
+html div.clock div.clock-ring div#min {
+  height: 5px;
+  -webkit-transform: translateY(-2.5px);
+          transform: translateY(-2.5px);
+}
+
+html div.clock div.clock-ring div#sec {
+  height: 2px;
+  -webkit-transform: translateY(40px);
+          transform: translateY(40px);
+  background: red;
 }
 
 /****************** 
