--- a/Sample Home Page/main.css
+++ b/Sample Home Page/main.css
@@ -13,8 +13,8 @@ body {
 }
 
 body #bg {
-  -webkit-clip-path: polygon(100% 0, 100% 82%, 45% 100%, 0% 100%, 0 0);
-          clip-path: polygon(100% 0, 100% 82%, 45% 100%, 0% 100%, 0 0);
+  -webkit-clip-path: polygon(100% 0, 100% calc(100% - 10vw), 45% 100%, 0% 100%, 0 0);
+          clip-path: polygon(100% 0, 100% calc(100% - 10vw), 45% 100%, 0% 100%, 0 0);
   background-color: #FF0D00;
   width: 100%;
   height: 100%;
@@ -24,8 +24,8 @@ body #bg {
 
 @media (min-width: 840px) {
   body #bg {
-    -webkit-clip-path: polygon(0 0, 74% 0, 54% 100%, 0% 100%);
-            clip-path: polygon(0 0, 74% 0, 54% 100%, 0% 100%);
+    -webkit-clip-path: polygon(0 0, calc(110vh) 0, calc(90vh) 100%, 0% 100%);
+            clip-path: polygon(0 0, calc(110vh) 0, calc(90vh) 100%, 0% 100%);
   }
 }
 
