--- a/Sample Home Page/main.scss
+++ b/Sample Home Page/main.scss
@@ -21,14 +21,14 @@ body {
     margin: 0;
     font-family: "Montserrat", sans-serif;
     #bg {
-        clip-path: polygon(100% 0, 100% 82%, 45% 100%, 0% 100%, 0 0);
+        clip-path: polygon(100% 0, 100% calc(100% - 10vw), 45% 100%, 0% 100%, 0 0);
         background-color: #FF0D00;
         width: 100%;
         height: 100%;
         position: absolute;
         z-index: -1;
         @include desktop {
-            clip-path: polygon(0 0, 74% 0, 54% 100%, 0% 100%);
+            clip-path: polygon(0 0, calc(110vh) 0, calc(90vh) 100%, 0% 100%);
         }
     }
     header a {
